--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 #docker run -d --name MyRabbitMQ -p 15672:15672 -p 5672:5672 rabbitmq:3-management
+#{userId='isjfdij', userEmail='shfs@jj.com', userPhone='4837487845', userFirstName='Sujanth', userLastName='Guntupalli', userPassword='hfkfe'}
+
+spring.rabbitmq.api.queueName.user=USER_QUEUE
+spring.rabbitmq.api.directExchangeName=USER_EXCHANGE
+spring.rabbitmq.api.routingKey.user=USER_ADD_KEY
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xxxxxx@gmail.com
+spring.mail.password=xxxxxxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
