--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #docker run -d --name MyRabbitMQ -p 15672:15672 -p 5672:5672 rabbitmq:3-management
-#{userId='isjfdij', userEmail='shfs@jj.com', userPhone='4837487845', userFirstName='Sujanth', userLastName='Guntupalli', userPassword='hfkfe'}
+#{userId='isjfdij', userEmail='shfs@jj.com', userPhone='4837487845', userFirstName='fyu', userLastName='fgf', userPassword='hfkfe'}
 
 spring.rabbitmq.api.queueName.user=USER_QUEUE
 spring.rabbitmq.api.directExchangeName=USER_EXCHANGE
