--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.rabbitmq.api.routingKey.user=USER_ADD_KEY
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xxxxxx@gmail.com
-spring.mail.password=xxxxxxx
+spring.mail.username=hghjhj@gmail.com
+spring.mail.password=yguhhhk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
